# ascii-izer

./: Cargo.toml  README.md  correct_result.rs
ascii-test/: Cargo.toml  correct_ascii.rs  correct_ascii_small.rs  correct_strings.rs  test
ascii-test/src/: main.rs  test_values.rs
core/: Cargo.toml
core/src/: color.rs  error.rs  generator.rs  lib.rs  terminal.rs
src/: error.rs  lib.rs  other.rs
