[package]
name = "ascii-izer"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for converting an image into ASCII art"
readme = "../README.md"

[features]
default = ["color"]
crossterm = ["dep:crossterm"]
color = []

[dependencies]
crossterm = { version = "0.28.1", optional = true }
image = "0.25.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
